      Eddelbuettel.)

      \item The primitive implementation of \code{@<-} was not
      checking the class of the replacement.  It now does a check,
      quicker but less general than \code{slot<-}. See the help.
      
      \item \code{split(x, f)} now recycles classed objects \code{x} in
      the same way as vectors.  (Reported by Martin Morgan.)
    }
  }
}

\section{\Rlogo CHANGES IN R VERSION 2.15.3}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{lgamma(x)} for very small \code{x} (in the
      denormalized range) is no longer \code{Inf} with a warning.

      \item \code{image()} now sorts an unsorted \code{breaks} vector,
      with a warning.

      \item The internal methods for \code{tar()} and \code{untar()} do
      a slightly more general job for \sQuote{ustar}-style handling of
      paths of more than 100 bytes.

      \item Packages \pkg{compiler} and \pkg{parallel} have been added
      to the reference index (\file{refman.pdf}).

      \item \code{untar(tar = "internal")} has some support for
      \code{pax} headers as produced by e.g. \command{gnutar --posix}
      (which seems prevalent on OpenSUSE 12.2) or
      \command{bsdtar --format pax}, including long path and link names.

      \item \code{sQuote()} and \code{dQuote()} now handle 0-length
      inputs.  (Suggestion of Ben Bolker.)

      \item \code{summaryRprof()} returns zero-row data frames rather
      than throw an error if no events are recorded, for consistency.
      
      \item The included version of PCRE has been updated to 8.32.
      
      \item The \pkg{tcltk} namespace can now be re-loaded after
      unloading.

      The Tcl/Tk event loop is inhibited in a forked child from package
      \pkg{parallel} (as in e.g. \code{mclapply()}).

      \item \code{parallel::makeCluster()} recognizes the value
      \samp{random} for the environment variable \env{R_PARALLEL_PORT}:
      this chooses a random value for the port and reduces the chance of