@@ -891,6 +891,10 @@
       
       \item \code{split(x, f)} now recycles classed objects \code{x} in
       the same way as vectors.  (Reported by Martin Morgan.)
+
+      \item On unix \code{Rscript} will pass the \code{r_arch} setting
+      it was compiled with on to the R process so that the architecture
+      of \code{Rscript} and that of \R will match unless overridden.
     }
   }
 }
